# rubic

./: Cargo.toml  README.md  test.rb
src/: errors.rs  lib.rs  main.rs
src/ast/: expr.rs  mod.rs  stmt.rs
src/ir/: expr.rs  id.rs  mod.rs  stmt.rs
src/parse/: errors.rs  mod.rs  parser.rs  token.rs  tokenize.rs
tools/: ir.rs  parse.rs  tokenize.rs
